--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -163,11 +163,14 @@
     <Compile Include="UI\ObjectExplorer\SchemaTreeModel.cs" />
     <Compile Include="UI\ObjectExplorer\SchemaTreeView.cs" />
     <Compile Include="Common\GtkTools.cs" />
+    <Compile Include="UI\Dialogs\frmPragmas.cs" />
+    <Compile Include="gtk-gui\SQLiteMonoPlusUI.frmPragmas.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="UI\" />
     <Folder Include="Images\DatabaseTree\" />
+    <Folder Include="UI\Dialogs\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
