--- a/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TableDesignerTreeModel.cs" />
     <Compile Include="SQLiteBuffer.cs" />
     <Compile Include="IDatabaseEditor.cs" />
+    <Compile Include="DatabaseEditorEvents.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
