--- a/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CustomObjects\SQLiteBuffer.cs" />
     <Compile Include="CustomObjects\IDatabaseEditor.cs" />
     <Compile Include="CustomObjects\SQLEditorView.cs" />
+    <Compile Include="CustomObjects\SQLEditorViewMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
