--- a/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusEditor/SQLiteMonoPlusEditor.csproj
@@ -46,6 +46,11 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="Mono.Data.SqliteClient">
+      <HintPath>..\SQLiteMonoPlusUI\dll\Mono.Data.SqliteClient.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
