--- a/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
+++ b/SQLiteMonoPlus/SQLiteMonoPlusUI/SQLiteMonoPlusUI.csproj
@@ -132,7 +132,6 @@
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.QueryEditor.cs" />
     <Compile Include="Custom Controls\TabLabel.cs" />
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.TabLabel.cs" />
-    <Compile Include="Dialogs\frmDatabaseConnect.cs" />
     <Compile Include="frmMain.cs" />
     <Compile Include="gtk-gui\SQLiteMonoPlusUI.frmDatabaseConnect.cs" />
     <Compile Include="Connections\ConnectionStore.cs" />
@@ -150,6 +149,9 @@
     <Compile Include="Common\StoreModels.cs" />
     <Compile Include="Common\SQL.cs" />
     <Compile Include="Common\StaticDataAccess.cs" />
+    <Compile Include="UI\Dialogs\frmDatabaseConnect.cs" />
+    <Compile Include="UI\Dialogs\frmConnectionManager.cs" />
+    <Compile Include="gtk-gui\SQLiteMonoPlusUI.frmConnectionManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
