--- a/UtilityTools/libMonoTools/libMonoTools/libMonoTools.csproj
+++ b/UtilityTools/libMonoTools/libMonoTools/libMonoTools.csproj
@@ -45,6 +45,9 @@
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <Private>False</Private>
     </Reference>
+    <Reference Include="Mono.Cairo, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
@@ -65,6 +68,10 @@
     <Compile Include="ErrorManager\ErrorManagement.cs" />
     <Compile Include="UI\Custom\LabelButton.cs" />
     <Compile Include="UI\Custom\URLButton.cs" />
+    <Compile Include="UI\Custom\LinkButton.cs" />
+    <Compile Include="UI\Custom\LabelButtonEvents.cs" />
+    <Compile Include="GtkTools\ColorConverter.cs" />
+    <Compile Include="GtkTools\FontMarkup.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
